# p95

./: .air.toml  .env.example  .gitignore  .prettierignore  Makefile  README.md  go.mod  go.sum  mise.toml
.github/workflows/: format.yml  p95-wheels.yml  sixtyseven-wheels.yml
cmd/api/: main.go
cmd/pnf/: main.go
cmd/sixtyseven/: main.go
cmd/tui/: main.go
deployments/docker/: Dockerfile.api  Dockerfile.api.dev  Dockerfile.tui  docker-compose.yml
deployments/docker/init/: 001_initial_schema.up.sql  002_timescale_hypertables.up.sql
examples/: README.md  local_mode_demo.py  multi_stage_training.py  share_run.py  simple_training.py  train_mnist.py
internal/api/handlers/: apps.go  auth.go  helpers.go  metrics.go  runs.go  teams.go
internal/api/localserver/: server.go
internal/api/middleware/: auth.go
internal/api/server/: server.go
internal/api/websocket/: hub.go
internal/config/: config.go
internal/domain/: apikey.go  app.go  artifact.go  continuation.go  metric.go  run.go  sweep.go  team.go  user.go
internal/repository/: interfaces.go
internal/repository/postgres/: apikeys.go  apps.go  db.go  (+6 more)
internal/server/: server.go
internal/service/: app.go  auth.go  metrics.go  run.go  team.go
internal/storage/: interface.go
internal/tui/: app.go
migrations/: 001_initial_schema.down.sql  002_timescale_hypertables.down.sql  002_timescale_hypertables.up.sql  003_run_continuations.down.sql  003_run_continuations.up.sql
pkg/client/: client.go  composite.go  composite_test.go
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/examples/: test_requirements.py  train_mlp.py  train_with_evals.py
sdk/python/scripts/: stage_binary.py
sdk/python/src/p95/: __init__.py  cli.py  client.py  cloud_cli.py  config.py  evaluation.py  exceptions.py  local.py  metrics.py  run.py  server.py  sweep.py  utils.py  worker.py
sdk/python/src/sixtyseven/: __init__.py  cli.py  client.py  config.py  exceptions.py  local.py  metrics.py  run.py  server.py  utils.py
sdk/python/tests/: __init__.py  test_cloud_cli.py  test_config.py  test_evaluation.py  test_log_eval.py  test_worker.py
web/: Dockerfile  embed.go  embed_dev.go  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: main.tsx  routeTree.gen.ts  vite-env.d.ts
(+57 files in other folders)
