[build-system]
requires = ["setuptools>=69,<77", "wheel", "packaging>=23.2"]
build-backend = "setuptools.build_meta"

[project]
name = "p95"
version = "0.2.0"
description = "Python SDK for p95 ML experiment tracking"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "NinetyFive" }
]
keywords = ["ml", "machine-learning", "experiment-tracking", "metrics", "training"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.28.0",
    "websocket-client>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "responses>=0.23.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/numerataz/p95"
Documentation = "https://github.com/numerataz/p95"
Repository = "https://github.com/numerataz/p95"

[project.scripts]
pnf = "p95.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["p95"]
include-package-data = true

[tool.setuptools.package-data]
p95 = ["bin/**"]

[tool.cibuildwheel]
# Only build once per platform - the wheel is py3-none (Python version agnostic)
# Build for both manylinux (glibc) and musllinux (Alpine)
build = "cp312-manylinux_x86_64 cp312-musllinux_x86_64"
# Skip auditwheel - the Go binary is statically linked (CGO_ENABLED=0)
# and doesn't need shared library bundling. The wheel is already tagged
# appropriately in setup.py's get_tag().
repair-wheel-command = "cp {wheel} {dest_dir}/"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
